--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "php": "^7.3|^8.0",
         "ext-json": "*",
 
-        "guzzlehttp/guzzle": "^5|^6|^7",
+        "guzzlehttp/guzzle": "^6|^7",
         "psr/log": "^1.1"
     },
     "scripts": {
